--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>col-ii</title>
+    <title>jon</title>
     <script type="module" src="/src/main.js"></script>
 </head>
 
